revert fixes which dont work for flickering

--- a/src/config/global.css
+++ b/src/config/global.css
@@ -24,23 +24,6 @@ html, body {
     position: absolute;
     scroll-behavior: smooth;
     scroll-padding-top: 70px;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    transition: none !important;
-    -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -o-transition: none !important;
-}
-
-.ui-mobile, .ui-mobile .ui-page, .ui-mobile [data-role="page"],
-.ui-mobile [data-role="dialog"], .ui-page, .ui-mobile .ui-page-active {
-    transition: none !important;
-    -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -o-transition: none !important;
-
 }
 
 /* ------------------------------------------------------------------------------ */
